Ajustes header y footer

--- a/index.html
+++ b/index.html
@@ -8,22 +8,21 @@
     <title>Colita Feliz - Home</title>
 </head>
 <body>
-    <header class="w-full grid sm:grid-cols-2 justify-center sm:align-middle align-middle px-2 bg-yellow min-h-fit border-b-2 border-slate-500/30">
+    <header class="w-full grid sm:grid-cols-2 justify-center sm:align-middle align-middle px-2 bg-[#F94C10] min-h-fit border-b-2 border-slate-500/30">
         <div class="grid justify-items-center mb-4 sm:justify-self-start pl-4 sm:mb-0">
             <img class="w-[5rem] h-[5rem] md:w-[3rem] md:h-[3rem]" src="./assets/Logo veterinaria pet shop azul y blanco.png" alt="Logo">
-            <h2 class="text-xs font-semibold italic text-blue">Lo mejor para tu peludo</h2>
+            <h2 class="text-xs font-semibold italic text-beige">Lo mejor para tu peludo</h2>
         </div>
-            <nav class="grid grid-cols-1 sm:grid-cols-4 justify-items-center w-full sm:w-8/12 sm:justify-self-end gap-3 sm:gap-1 mb-3  text-blue md:mb-0 sm:self-center">
-                <a href="./index.html" class="hover:text-red">Inicio</a>
-                <a href="#" class="hover:text-red">Farmacia</a>
-                <a href="#" class="hover:text-red">Juguetería</a>
-                <a href="#" class="hover:text-red">Contacto</a>
+            <nav class="grid grid-cols-1 sm:grid-cols-4 justify-items-center w-full sm:w-8/12 sm:justify-self-end gap-3 sm:gap-1 mb-3  text-beige font-semibold md:mb-0 sm:self-center">
+                <a href="./index.html" class="hover:text-blue">Inicio</a>
+                <a href="#" class="hover:text-blue">Farmacia</a>
+                <a href="#" class="hover:text-blue">Juguetería</a>
+                <a href="#" class="hover:text-blue">Contacto</a>
             </nav>
         </div>
     </header>
    <main class="min-h-screen w-full bg-blue">
-        <div class="bg-cover bg-center bg-[url('./assets/pexels-lumn-406014.jpg')] h-[30rem]">
-            <h1 class="text-5xl font-bold text-center pt-20 text-red">Bienvenido a Colita Feliz</h1>
+        <div class="bg-cover bg-top bg-[url('./assets/adoption.png')] h-[40rem]">
         </div>
         
 
@@ -49,7 +48,7 @@
             </div>
         </div>
         <div>
-            <ul class="list-none">
+            <ul class="list-none leading-loose">
                 <li class="font-semibold">Nosotros</li>
                 <li class="hover:text-orange">Contacto</li>
                 <li class="hover:text-orange">Historia</li>
@@ -57,7 +56,7 @@
             </ul>
         </div>
         <div>
-            <ul class="list-none">
+            <ul class="list-none leading-loose">
                 <li class="font-semibold">Productos</li>
                 <li class="hover:text-orange">Farmacia</li>
                 <li class="hover:text-orange">Juguetería</li>
@@ -65,7 +64,7 @@
             </ul>
         </div>
         <div>
-            <ul class="list-none">
+            <ul class="list-none leading-loose">
                 <li class="font-semibold">Servicios</li>
                 <li class="hover:text-orange">Horarios</li>
                 <li class="hover:text-orange">Peluquería</li>
