--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Colita Feliz - Home</title>
 </head>
 <body>
-    <header class="w-full grid sm:grid-cols-2 justify-center sm:align-middle align-middle px-2 bg-[#F94C10] min-h-fit border-b-2 border-slate-500/30">
+    <header class="w-full grid sm:grid-cols-2 justify-center sm:align-middle align-middle px-2 bg-orange min-h-fit border-b-2 border-slate-500/30">
         <div class="grid justify-items-center mb-4 sm:justify-self-start pl-4 sm:mb-0">
             <img class="w-[5rem] h-[5rem] md:w-[3rem] md:h-[3rem]" src="./assets/Logo veterinaria pet shop azul y blanco.png" alt="Logo">
             <h2 class="text-xs font-semibold italic text-beige">Lo mejor para tu peludo</h2>
@@ -21,9 +21,24 @@
             </nav>
         </div>
     </header>
-   <main class="min-h-screen w-full bg-blue">
-        <div class="bg-cover bg-top bg-[url('./assets/adoption.png')] h-[40rem]">
+   <main class="min-h-screen w-full bg-blue pb-6">
+        <div class="bg-cover bg-top bg-[url('./assets/adoption.png')] h-screen">
         </div>
+        <a href="#" class="container p-10 mx-auto mt-5 group">
+            <div class="container bg-[url('./assets/pexels-gratisography-4602.jpg')] bg-cover bg-top mx-auto bg-card p-10 mt-6 mb-6 rounded-2xl">
+                <h2 class="px-4 text-6xl pt-16 pb-4 mb-2 text-black font-medium font-roboto group-hover:text-orange">Solo por este mes</h2>
+                <p class="px-4 text-2xl text-black pb-16 md:pr-10 font-roboto group-hover:text-orange"><span class="group-hover:font-extrabold">30%</span> de descuento en todos nuestros productos de <span class="group-hover:font-extrabold">juguetería</span></p>
+              </div>
+            </div>
+        </a>
+      
+        <a href="#" class="container mx-4 mt-5 group">
+            <div class="container bg-[url('./assets/pexels-lumn-406014.jpg')] bg-cover bg-bottom mx-auto p-10 rounded-2xl">
+                <h2 class="px-4 text-6xl font-medium pt-16 pb-6 mb-2 font-roboto text-black group-hover:text-orange">Clientes satisfechos</h2>
+                <p class="px-4 text-2xl text-black pb-16 font-roboto group-hover:text-orange">Mira por qué nuestros clientes vuelven a elegirnos una y otra vez</p>
+            </div>
+        </a>
+ 
         
 
    </main>
@@ -36,7 +51,7 @@
                         <path d="M15,3C8.373,3,3,8.373,3,15c0,6.016,4.432,10.984,10.206,11.852V18.18h-2.969v-3.154h2.969v-2.099c0-3.475,1.693-5,4.581-5 c1.383,0,2.115,0.103,2.461,0.149v2.753h-1.97c-1.226,0-1.654,1.163-1.654,2.473v1.724h3.593L19.73,18.18h-3.106v8.697 C22.481,26.083,27,21.075,27,15C27,8.373,21.627,3,15,3z"></path>
                     </svg>
                     </a>
-                    <a href="https://www.instagram.com/"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="45" viewBox="0 0 32 32">
+                    <a href="https://www.instagram.com/"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="40" height="45" viewBox="0 0 32 32">
                         <path d="M 11.46875 5 C 7.917969 5 5 7.914063 5 11.46875 L 5 20.53125 C 5 24.082031 7.914063 27 11.46875 27 L 20.53125 27 C 24.082031 27 27 24.085938 27 20.53125 L 27 11.46875 C 27 7.917969 24.085938 5 20.53125 5 Z M 11.46875 7 L 20.53125 7 C 23.003906 7 25 8.996094 25 11.46875 L 25 20.53125 C 25 23.003906 23.003906 25 20.53125 25 L 11.46875 25 C 8.996094 25 7 23.003906 7 20.53125 L 7 11.46875 C 7 8.996094 8.996094 7 11.46875 7 Z M 21.90625 9.1875 C 21.402344 9.1875 21 9.589844 21 10.09375 C 21 10.597656 21.402344 11 21.90625 11 C 22.410156 11 22.8125 10.597656 22.8125 10.09375 C 22.8125 9.589844 22.410156 9.1875 21.90625 9.1875 Z M 16 10 C 12.699219 10 10 12.699219 10 16 C 10 19.300781 12.699219 22 16 22 C 19.300781 22 22 19.300781 22 16 C 22 12.699219 19.300781 10 16 10 Z M 16 12 C 18.222656 12 20 13.777344 20 16 C 20 18.222656 18.222656 20 16 20 C 13.777344 20 12 18.222656 12 16 C 12 13.777344 13.777344 12 16 12 Z"></path>
                         </svg>
                     </a>
