termine style card

--- a/assets/pages/toys.html
+++ b/assets/pages/toys.html
@@ -31,8 +31,8 @@
             </div>
             <div class="flex flex-wrap gap-6 justify-center mt-6 mb-6">
                 <template v-if="categorias.length > 0" v-for="producto in categorias">
-                    <div class="w-[300px] flex flex-col">
-                        <div class="p-6 bg-gray-700 rounded-xl shadow group">
+                    <div class="w-[350px] flex flex-col">
+                        <div class="p-6 bg-orange rounded-xl shadow group">
                             <a class="block mb-2" href="#">
                                 <div class="relative overflow-hidden">
                                     <div class="mb-5 overflow-hidden">
@@ -42,7 +42,7 @@
                                     <div class="absolute flex flex-col top-4 right-4">
                                         <div class="flex items-center">
                                             <div
-                                                class="relative flex items-center justify-center p-3 mb-3 text-beige transition-all translate-x-20 bg-gray-700 rounded group-hover:translate-x-0 wishlist hover:bg-blue-600 group">
+                                                class="relative flex items-center justify-center p-3 mb-3 text-beige transition-all translate-x-20 bg-orange rounded group-hover:translate-x-0 wishlist hover:bg-blue-600 group">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                                                     fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
                                                     <path
@@ -53,7 +53,7 @@
 
                                         <div class="flex items-center">
                                             <div
-                                                class="relative flex items-center justify-center p-3 mb-3 text-beige transition-all translate-x-20 bg-gray-700 rounded group-hover:translate-x-0 wishlist hover:bg-blue-600 group">
+                                                class="relative flex items-center justify-center p-3 mb-3 text-beige transition-all translate-x-20 bg-orange rounded group-hover:translate-x-0 wishlist hover:bg-blue-600 group">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                                                     fill="currentColor" class="bi bi-cart2 " viewBox="0 0 16 16">
                                                     <path
