--- a/assets/pages/toys.html
+++ b/assets/pages/toys.html
@@ -64,7 +64,7 @@
                                     </div>
                                 </div>
                                 <h3 class="mb-2 text-xl font-bold text-beige">{{producto.producto}}</h3>
-                                <p class="text-xs font-bold text-blue-300 line-clamp-3 text-white">
+                                <p class="text-sm font-bold text-blue-300 line-clamp-5 text-white">
                                     {{producto.descripcion}}</p>
                             </a>
                             <div class="flex justify-center">
@@ -137,23 +137,22 @@
         <div v-if="modalVisible"
             class=" w-full  h-screen  bg-slate-400/40  fixed inset-0 z-10 flex justify-center items-center ">
             <div
-                class="w-80 h-[450px] md:w-3/4 md:h-3/4 flex justify-center items-center  rounded-2xl bg-orange shadow-lg  text-beige  hover:text-blue">
+                class="w-11/12 h-auto md:w-3/4 md:h-3/4 flex justify-center items-center  rounded-2xl bg-orange shadow-lg  text-beige  hover:text-blue">
                 <div class=" w-full h-full flex flex-end flex-row-reverse ">
                     <button v-on:click="cerrarModal" class=" w-10 h-10 mt-1 mr-2 ">
                         <img src="../huella.png" class="bg-beige p-1 rounded-lg" alt="cerrarModal">
                     </button>
-
                     <template v-if="prodJugeteria.producto">
                         <div class="flex flex-col-reverse md:flex-row w-[90%] h-[90%] justify-center items-center mt-3">
                             <div class="order-2 md:order-1  md:w-1/2">
-                                <img class="object-cover w-full rounded-xl h-40 md:h-80 shadow-2xl" v-bind:src="prodJugeteria.imagen" v-bind:alt="prodJugeteria.producto">
+                                <img class="object-cover w-40 md:w-full rounded-xl h-40 md:h-80 shadow-2xl" v-bind:src="prodJugeteria.imagen" v-bind:alt="prodJugeteria.producto">
                             </div>
                             <div class="order-1 md:order-2 w-full md:w-1/2 flex flex-col justify-center items-start pl-4">
                                 <h3 class="mb-2 text-sm lg:text-lg font-bold text-white">{{prodJugeteria.producto}}</h3>
                                 <h4 class="mb-2 text-sm lg:text-base font-bold text-white">Precio ${{prodJugeteria.precio}}</h4>
                                 <h4 class="mb-2 text-sm lg:text-base font-bold text-white">Cantidad Disponible: {{prodJugeteria.disponibles}} unidades</h4>
                                 <p class="text-xs lg:text-sm font-bold text-blue-300 text-white">{{prodJugeteria.descripcion}}</p>
-                                <div class="flex mt-3 md:ml-auto md:mt-4">
+                                <div class="flex mt-3 mb-2 md:ml-auto md:mt-4">
                                     <a href="URL_DE_TU_PAGINA_DE_COMPRA">
                                         <button @click="agregarAlCarrito(prodJugeteria)" class="p-1 rounded-lg bg-[#F94C10] text-beige hover:text-blue text-xs md:text-sm ">Agregar al carrito</button>
                                     </a>
@@ -166,10 +165,8 @@
                         
                     </template>
                 </div>
-
             </div>
         </div>
-
     </div>
     <script type="module" src="../tailwind.config.extension.js"></script>
     <script type="module" src="../tailwind.config.js"></script>
