--- a/assets/pages/toys.html
+++ b/assets/pages/toys.html
@@ -150,7 +150,13 @@
                             <div class="order-1 md:order-2 w-full md:w-1/2 flex flex-col justify-center items-start pl-4">
                                 <h3 class="mb-2 text-sm lg:text-lg font-bold text-white">{{prodJugeteria.producto}}</h3>
                                 <h4 class="mb-2 text-sm lg:text-base font-bold text-white">Precio ${{prodJugeteria.precio}}</h4>
-                                <h4 class="mb-2 text-sm lg:text-base font-bold text-white">Cantidad Disponible: {{prodJugeteria.disponibles}} unidades</h4>
+                                <div v-if="prodJugeteria.disponibles < 5" class="mb-2 text-sm lg:text-base font-bold text-red-500">
+                                    ¡Últimas unidades!
+                                </div>
+                                <div v-else class="mb-2 text-sm lg:text-base font-bold text-white">
+                                    Cantidad Disponible: {{prodJugeteria.disponibles}} unidades
+                                </div>
+                                
                                 <p class="text-xs lg:text-sm font-bold text-blue-300 text-white">{{prodJugeteria.descripcion}}</p>
                                 <div class="flex mt-3 mb-2 md:ml-auto md:mt-4">
                                     <a href="URL_DE_TU_PAGINA_DE_COMPRA">
