--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav class="grid grid-cols-1 sm:grid-cols-4 justify-items-center w-full sm:w-8/12 sm:justify-self-end gap-3 sm:gap-1 mb-3  text-beige font-semibold md:mb-0 sm:self-center">
                 <a href="./index.html" class="hover:text-blue">Inicio</a>
                 <a href="#" class="hover:text-blue">Farmacia</a>
-                <a href="../ColitaFeliz/pages/toys.html" class="hover:text-blue">Juguetería</a>
+                <a href="./pages/toys.html" class="hover:text-blue">Juguetería</a>
                 <a href="#" class="hover:text-blue">Contacto</a>
             </nav>
     </header>
