modificaciones de responsive

--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
         <div>    
             <img src="./assets/adoption.png" class="cover top">
         </div>
-        <a href="./pages/toys.html" class="container group mx-4">
+        <a href="./pages/toys.html" class="container group mx-4 w-10/12">
             <div class="container bg-[url('./assets/pexels-gratisography-4602.jpg')] bg-cover bg-top mx-auto bg-card p-10  mb-6 rounded-2xl">
-                <h2 class="px-4 text-6xl pt-16 pb-4 mb-2 text-black font-medium font-roboto group-hover:text-orange">Solo por este mes</h2>
+                <h2 class="px-4 text-5xl md:text-6xl pt-16 pb-4 mb-2 text-black font-medium font-roboto group-hover:text-orange">Solo por este mes</h2>
                 <p class="px-4 text-2xl text-black pb-16 md:pr-10 font-roboto group-hover:text-orange"><span class="group-hover:font-extrabold">30%</span> de descuento en todos nuestros productos de <span class="group-hover:font-extrabold">juguetería</span></p>
             </div>
         </a>
       
         <a href="#" class="container mx-4 mt-5 group">
             <div class="container bg-[url('./assets/pexels-lumn-406014.jpg')] bg-cover bg-bottom mx-auto p-10 rounded-2xl">
-                <h2 class="px-4 text-6xl font-medium pt-16 pb-6 mb-2 font-roboto text-black group-hover:text-orange">Clientes satisfechos</h2>
+                <h2 class="px-4 text-5xl md:text-6xl font-medium pt-16 pb-6 mb-2 font-roboto text-black group-hover:text-orange">Clientes satisfechos</h2>
                 <p class="px-4 text-2xl text-black pb-16 font-roboto group-hover:text-orange">Mira por qué nuestros clientes vuelven a elegirnos una y otra vez</p>
             </div>
         </a>
