--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -73,12 +73,12 @@
         <section class="flex flex-wrap md:justify-end items-center bg-no-repeat w-full bg-[#FFC736] h-auto bg-contain"
             style="background-image: url('../assets/Pet\ Shop\ Store\ Dog\ Instagram\ Story\ \(1\).png');">
             <article class="flex flex-wrap mb-12 items-center justify-center flex-col md:flex-row ">
-                <iframe class="w-[200px] h-36  m-2 md:w-[500px] md:h-72 flex"
+                <iframe class="w-[200px] h-36  m-2 md:w-[500px] md:h-72 grow md:flex-none"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.2432185162206!2d-58.40580882626773!3d-34.59801079740836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca9158e82c41%3A0xafb5fe117a2c5a52!2sParaguay%202334%2C%20C1121ABL%20CABA%2C%20Argentina!5e0!3m2!1ses-419!2sco!4v1700886987162!5m2!1ses-419!2sco"
                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <h2
-                    class="font-lilita text-4xl md:text-7xl md:w-80 text-center self-center md:mx-16 text-white bg-gradient-to-r from-[#E94E1B] to-yellow rounded-md shadow-lg">
+                    class="font-lilita grow text-4xl md:text-7xl md:w-80 text-center self-center md:mx-16 text-white bg-gradient-to-r from-[#E94E1B] to-yellow rounded-md shadow-lg">
                     SIEMPRE ESTAMOS CERCA DE TI</h2>
             </article>
         </section>
