modificaciones de responsive y logo

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header class="w-full flex flex-col md:flex-row md:justify-between space-between px-2 bg-orange min-h-fit border-b-2 items-center border-slate-500/30">
-        <a href="#" class="grid justify-items-center mb-4 sm:justify-self-start pl-4 sm:mb-3">
+        <a href="../index.html" class="grid justify-items-center mb-4 sm:justify-self-start pl-4 sm:mb-3">
             <img class="w-[5rem] h-[5rem] md:w-[3rem] md:h-[3rem]" src="../assets/Logo veterinaria pet shop azul y blanco.png" alt="Logo">
             <h2 class="text-xs font-semibold italic text-beige">Lo mejor para tu peludo</h2>
         </a>
