--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -26,13 +26,12 @@
         </nav>
 </header>
     <div id="app">
-    <main class="flex flex-wrap  place-content-center bg-[#083D77]">
+    <main class="flex flex-wrap  place-content-center bg-blue">
         <div>
             <img src="../assets/contacto colita feliz.png" alt="banner-contacto">
         </div>
 
-        <section
-            class="flex flex-col w-11/12 items-center md:flex-row md:gap-10 bg-gradient-to-r from-sky-500 to-indigo-500 border-solid border-2 md:w-1/2 md:m-4 md:p-8 rounded-lg">
+        <section class="flex p-8 my-6 flex-col w-11/12 items-center md:flex-row md:gap-10 bg-gradient-to-r from-sky-500 to-indigo-500 border-solid border-2 md:w-1/2 rounded-lg">
             <div class="flex place-self-center">
                 <img class="rounded shadow-xl  shadow-indigo-500/40" src="../assets/form img.png" alt="form-picture">
             </div>
