--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -22,7 +22,7 @@
             <a href="../index.html" class="hover:text-blue">Inicio</a>
             <a href="#" class="hover:text-blue">Farmacia</a>
             <a href="../pages/toys.html" class="hover:text-blue">Juguetería</a>
-            <a href="../pages/contacto.html" class="hover:text-blue">Contacto</a>
+            <a href="#" class="hover:text-blue">Contacto</a>
         </nav>
 </header>
     <div id="app">
