ajustes detalles estilo home

--- a/index.html
+++ b/index.html
@@ -20,22 +20,24 @@
                 <a href="./pages/contacto.html" class="hover:text-blue">Contacto</a>
             </nav>
     </header>
-   <main class="min-h-screen w-full bg-blue pb-6 gap-5">
+   <main class="min-h-screen w-full bg-blue pb-6">
         <div clas="pb-3">    
             <img src="./assets/adoption.png" class="cover top">
         </div>
-        <a href="./pages/toys.html" class="container group mx-4 w-10/12">
-            <div class="container bg-[url('./assets/pexels-gratisography-4602.jpg')] bg-cover bg-top mx-auto bg-card p-10  mb-6 rounded-2xl">
-                <h2 class="px-4 text-5xl md:text-6xl pt-16 pb-4 mb-2 text-black font-medium font-roboto group-hover:text-orange">Solo por este mes</h2>
-                <p class="px-4 text-2xl text-black pb-16 md:pr-10 font-roboto group-hover:text-orange"><span class="group-hover:font-extrabold">30%</span> de descuento en todos nuestros productos de <span class="group-hover:font-extrabold">juguetería</span></p>
-            </div>
-        </a>
-        <a href="./pages/farmacia.html" class="container mx-4 mt-5 group">
-            <div class="container bg-[url('./assets/pexels-pixabay-97082.jpg')] bg-cover bg-center mx-auto p-10 rounded-2xl">
-                <h2 class="px-4 text-5xl md:text-6xl font-medium pt-16 pb-6 mb-2 font-roboto text-beige group-hover:text-orange">El mejor cuidado para tu mascota</h2>
-                <p class="px-4 text-2xl text-beige pb-16 font-roboto group-hover:text-orange">Nuestros productos de <span class="group-hover:font-extrabold">farmacia</span> son de la mejor calidad</p>
-            </div>
-        </a>   
+        <div class="mt-6">
+            <a href="./pages/toys.html" class="container group mx-4 w-10/12">
+                <div class="container bg-[url('./assets/pexels-gratisography-4602.jpg')] bg-cover bg-top mx-auto bg-card p-10  mb-6 rounded-2xl">
+                    <h2 class="px-4 text-5xl md:text-6xl pt-16 pb-4 mb-2 text-black font-medium font-roboto group-hover:text-orange">Solo por este mes</h2>
+                    <p class="px-4 text-2xl text-black pb-16 md:pr-10 font-roboto group-hover:text-orange"><span class="group-hover:font-extrabold">30%</span> de descuento en todos nuestros productos de <span class="group-hover:font-extrabold">juguetería</span></p>
+                </div>
+            </a>
+            <a href="./pages/farmacia.html" class="container mx-4 mt-5 group">
+                <div class="container bg-[url('./assets/pexels-pixabay-97082.jpg')] bg-cover bg-center mx-auto p-10 rounded-2xl">
+                    <h2 class="px-4 text-5xl md:text-6xl font-medium pt-16 pb-6 mb-2 font-roboto text-beige group-hover:text-orange">El mejor cuidado para tu mascota</h2>
+                    <p class="px-4 text-2xl text-beige pb-16 font-roboto group-hover:text-orange">Nuestros productos de <span class="group-hover:font-extrabold">farmacia</span> son de la mejor calidad</p>
+                </div>
+            </a> 
+        </div>  
    </main>
    <footer class="min-h-[20rem] sm:min-h-[30rem] w-full bg-amber-100 grid-cols-1 gap-5 flex flex-col items-center py-4 md:grid md:grid-cols-4 md:justify-items-center md:min-h-[20rem]">
         <div>
