sitio completado, falta suma total

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -23,6 +23,7 @@
             <a href="../pages/farmacia.html" class="hover:text-blue">Farmacia</a>
             <a href="../pages/toys.html" class="hover:text-blue">Juguetería</a>
             <a href="#" class="hover:text-blue">Contacto</a>
+            <a href="../pages/carrito.html" class="hover:text-blue">Mi carrito</a>
         </nav>
 </header>
     <div id="app">
