--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <a href="./pages/farmacia.html" class="hover:text-blue">Farmacia</a>
                 <a href="./pages/toys.html" class="hover:text-blue">Juguetería</a>
                 <a href="./pages/contacto.html" class="hover:text-blue">Contacto</a>
+                <a href="./pages/carrito.html" class="hover:text-blue">Mi carrito</a>
             </nav>
     </header>
    <main class="min-h-screen w-full bg-blue pb-6">
