--- a/pages/toys.html
+++ b/pages/toys.html
@@ -62,7 +62,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <h3 class="mb-2 text-xl font-bold text-beige">{{producto.producto}}</h3>
+                                <button @click="showModal(producto)" class="mb-2 text-xl font-bold text-beige">{{producto.producto}}</button>
                                 <p class="text-sm font-bold text-blue-300 line-clamp-3 text-white">
                                     {{producto.descripcion}}</p>
                             </a>
