--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -8,19 +8,18 @@
     <title>Colita Feliz - Home</title>
 </head>
 <body>
-    <header class="w-full grid sm:grid-cols-2 justify-center sm:align-middle align-middle px-2 bg-[#F94C10] min-h-fit border-b-2 border-slate-500/30">
-        <div class="grid justify-items-center mb-4 sm:justify-self-start pl-4 sm:mb-0">
-            <img class="w-[5rem] h-[5rem] md:w-[3rem] md:h-[3rem]" src="/assets/Logo veterinaria pet shop azul y blanco.png" alt="Logo">
+    <header class="w-full flex flex-col md:flex-row md:justify-between space-between px-2 bg-orange min-h-fit border-b-2 items-center border-slate-500/30">
+        <a href="../index.html" class="grid justify-items-center mb-4 sm:justify-self-start pl-4 sm:mb-3">
+            <img class="w-[5rem] h-[5rem] md:w-[3rem] md:h-[3rem]" src="../assets/Logo veterinaria pet shop azul y blanco.png" alt="Logo">
             <h2 class="text-xs font-semibold italic text-beige">Lo mejor para tu peludo</h2>
-        </div>
-        <nav class="grid grid-cols-1 sm:grid-cols-5 justify-items-center w-full sm:w-8/12 sm:justify-self-end gap-3 sm:gap-1 mb-3  text-beige font-semibold md:mb-0 sm:self-center">
-            <a href="/index.html" class="hover:text-blue">Inicio</a>
-            <a href="./farmacia.html" class="hover:text-blue">Farmacia</a>
-            <a href="./toys.html" class="hover:text-blue">Juguetería</a>
-            <a href="./contacto.html" class="hover:text-blue">Contacto</a>
+        </a>
+        <nav class="flex flex-col mb-3 items-center mr-2 sm:flex-row flex-wrap gap-3 sm:gap-8 justify-items-center w-auto text-beige font-semibold md:mb-0 sm:mb-3 sm:self-center">
+            <a href="../index.html" class="hover:text-blue">Inicio</a>
+            <a href="../pages/farmacia.html" class="hover:text-blue">Farmacia</a>
+            <a href="../pages/toys.html" class="hover:text-blue">Juguetería</a>
+            <a href="../pages/contacto.html" class="hover:text-blue">Contacto</a>
             <a href="#" class="hover:text-blue">Mi carrito</a>
         </nav>
-        </div>
     </header>
     <div id="app" class="container mx-auto mt-10">
         <div id="cart-app">
